<resources>
    <string name="app_name">GenerarTransaccionCombustible</string>

    <!-- Strings del Login -->
    <string name="gen_tran">Generar Transacciones Combustibles</string>
    <string name="user">Usuario</string>
    <string name="password">Clave</string>
    <string name="TIASSAC">TIASSAC</string>
    <string name="clave">123456</string>
    <string name="enter">INGRESAR</string>

    <!-- Strings del Splash -->
    <string name="assac">Created by Automation Service S.A.C.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>

    <!--String Transaccion-->
    <string name="userTran">Usuario: </string>
    <string name="ticket">Ticket:</string>
    <string name="station">Estación: </string>
    <string name="operation">Cerro Verde</string>
    <string name="scoop">SCOOP</string>
    <string name="referralGuide">GUIA REMISION</string>
    <string name="volReferralGuide">VOL. GUIA REMISION</string>
    <string name="dniDriver">DNI CONDUCTOR</string>
    <string name="plate">PLACA</string>
    <string name="contometerInit">CONTOMETRO INICIO</string>
    <string name="contometerEnd">CONTOMETRO FIN</string>
    <string name="volpre">VOLPRE</string>
    <string name="difVolume">DIF. VOLUMEN</string>
    <string name="generate">GENERAR</string>

    <!--String Menu Action Bar-->

    <string name="menuPrincipal">Menú Principal</string>
    <string name="report">Reporte</string>
    <string name="transaction">Transacciones</string>
    <string name="turn">Turno</string>
    <string name="createTransaction">Crear Transacción</string>
    <string name="configuration">Configuración</string>

    <!--String Cabecera de Datos-->

    <string name="date">Fecha - Hora Actual:</string>
    <string name="turn2">Turno:</string>
    <string name="turn3">Ultimo Turno Registrado:</string>
    <string name="initTurn">Inicio Turno</string>
    <string name="endTurn">Fin Turno</string>
    <string name="signOff">Cerrar Sesión</string>

    <!--String Vista Configuracion-->

    <string name="save">Guardar</string>

</resources>
